# Elastos.Hive.Native.SDK

./: .appveyor.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog.md  README.md  THANKS.md
apps/: CMakeLists.txt
apps/cmd/: CMakeLists.txt  cmd.c  cmd.conf  config.c  config.h  constants.h
apps/demo/: CMakeLists.txt  config.c  config.h  demo.c  demo.conf
apps/prober/: CMakeLists.txt  prober.c
cmake/: AddSubModule.cmake  CheckBuildOptions.cmake  ExternalCMakeArgs.cmake  ExternalConfigureArgs.cmake  HiveDefaults.cmake  HivePackages.cmake
cpp-test/: dstore_test.sh
docs/: CMakeLists.txt
docs/source/: conf.py.in  hive-api.rst  hive-error-number.rst  hive-intro.rst  hive.cfg.in  index.rst
include/hive/: c-api.h  message.h  node.h
include/hive/nlohmann/: json.hpp
src/: CMakeLists.txt  client.c  client.h  client_impl.h  drive.c  drive.h  drive_impl.h  ela_error.c  ela_error.h  ela_hive.h  elastos_hive.h  error.c  error.h  export_symbols.txt  hive.c  hive.h  hive_api.c  hive_client.c  hive_client.h  hive_drive.c  hive_error.c  hive_error.h  hive_file.c  hive_impl.h  hive_key.c  http_cli.c  http_cli.h  http_status.c  http_status.h  message.cc  mkdirs.c  mkdirs.h  node.cc  oauth_cli.c  oauth_cli.h  oauth_client.c  oauth_client.h  oauth_client_internal.h  oauth_client_intl.h  onedrive.c  (+5 more)
src/c-api/: dstorec.cc
src/http/: http_client.c  http_client.h
src/oauth/: oauth_token.c  oauth_token.h
src/vendors/hiveipfs/: hiveipfs.c  hiveipfs.h  hiveipfs_client.c  hiveipfs_client.h  hiveipfs_drive.c  hiveipfs_drive.h
src/vendors/ipfs/: ipfs.c  ipfs.h  ipfs_client.c  ipfs_client.h  ipfs_common_ops.c  ipfs_common_ops.h  ipfs_constants.h  ipfs_drive.c  ipfs_drive.h  ipfs_file.c  ipfs_file.h  ipfs_rpc.c  ipfs_rpc.h  ipfs_token.c  ipfs_token.h  ipfs_utils.c  ipfs_utils.h
src/vendors/local/: local_client.c  local_client.h
src/vendors/native/: native_client.c  native_client.h
src/vendors/onedrive/: onedrive.c  onedrive.h  onedrive_client.c  onedrive_client.h  onedrive_common.h  onedrive_constants.h  onedrive_drive.c  onedrive_drive.h  onedrive_file.c  onedrive_misc.h
src/vendors/owncloud/: owncloud.c  owncloud.h
tests/: CMakeLists.txt  config.c  config.h  constants.h  hive-asynctest.c  hive-auth-wrapper.c  hive-auth-wrapper.h  hive-authorize-test.c  hive-authorizing-test.c  hive-client-drivelist-test.c  hive-client-getinfo-test.c  hive-client-login-test.c  hive-client-logining-test.c  hive-client-new-test.c  hive-client-opendrive-test.c  hive-dirve_mkdir-test.c  hive-drive-copy-test.c  hive-drive-filelist-test.c  hive-drive-filestat-test.c  hive-drive-getinfo-test.c  hive-drive-move-test.c  hive-drive_mkdir-test.c  hive-expired-token-test.c  hive-file-test.c  hive-mkdir-test.c  hive-new-test.c  hive-no-file-test.c  launcher.c  main.c  onedrv_auth.c  suites.h  test_helper.c  test_helper.h  tests.c  tests.conf
tests/api/: suites.h  test_context.c  test_context.h  tests.c
tests/api/cases/: case.h  file_apis_cases.c  file_apis_cases.h  ipfs_file_apis_cases.c  ipfs_file_apis_cases.h  key_value_apis_cases.c  key_value_apis_cases.h
tests/api/client/: client_get_info_test.c  client_new_test.c  login_test.c  logout_test.c  suites.h
tests/api/drive/: drive_get_info_test.c  drive_open_test.c  file_ops_test.c  list_files_test.c  suites.h
tests/api/file/: file_apis_test.c  suites.h
tests/api/suites/: ipfs_suite.c  ipfs_suite.h  onedrive_suite.c  onedrive_suite.h  suite.h  suites.h
